Bug 481391 - When a user has a panel on the top of the screen, rectangular area screencasts are recorded in the wrong location
Summary: When a user has a panel on the top of the screen, rectangular area screencast...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 24.01.95
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords: qt6
: 482287 482407 482747 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-02-16 01:50 UTC by Adam Fontenot
Modified: 2024-05-05 20:35 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.1
Sentry Crash Report:


Attachments
frame of a screencast showing the issue (65.50 KB, image/png)
2024-02-16 01:50 UTC, Adam Fontenot
Details
spectacle screencast showing the horizontal offset and recording outline issue (27.88 KB, video/mp4)
2024-02-27 04:43 UTC, Adam Fontenot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Fontenot 2024-02-16 01:50:09 UTC
Created attachment 165846 [details]
frame of a screencast showing the issue

SUMMARY

When I select a rectangle outline for Spectacle to record a screencast, the actual location of the recording is (usually?) shifted slightly from the location I choose, and the resulting recording includes the dashed line that shows the recording location.


SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.93.0
KDE Frameworks Version: 5.249.0
Qt Version: 6.7.0
Kernel Version: 6.7.4-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Adam Fontenot 2024-02-17 15:22:57 UTC
A different bug I just encountered and am about to report is making me think that it's relevant that I have a top panel. It's about the same width as the vertical offset of the recording from the requested location.
Comment 2 Adam Fontenot 2024-02-23 16:41:19 UTC
As confirmation, I moved my panel to the bottom of the screen and it fixed the issue with the recording being in the wrong place. Very strange.
Comment 3 Noah Davis 2024-02-27 03:37:57 UTC
Git commit 2fedc54075b030312015638a2b6278b217de3763 by Noah Davis.
Committed on 27/02/2024 at 03:37.
Pushed by ndavis into branch 'master'.

Set layer-shell exclusive zone for capture region overlay

An exclusize zone of -1 means the window should not make way for other
surfaces.

M  +2    -0    src/SpectacleCore.cpp

https://invent.kde.org/graphics/spectacle/-/commit/2fedc54075b030312015638a2b6278b217de3763
Comment 4 Noah Davis 2024-02-27 03:42:25 UTC
Git commit d2d3fdcf9a55c1707b844e929511dcbb4e022738 by Noah Davis.
Committed on 27/02/2024 at 03:38.
Pushed by ndavis into branch 'release/24.02'.

Set layer-shell exclusive zone for capture region overlay

An exclusize zone of -1 means the window should not make way for other
surfaces.
(cherry picked from commit 2fedc54075b030312015638a2b6278b217de3763)

M  +2    -0    src/SpectacleCore.cpp

https://invent.kde.org/graphics/spectacle/-/commit/d2d3fdcf9a55c1707b844e929511dcbb4e022738
Comment 5 Adam Fontenot 2024-02-27 04:43:29 UTC
Created attachment 166123 [details]
spectacle screencast showing the horizontal offset and recording outline issue

Can confirm that the patch fixes the issue, but note that I do still see the issue with the recording being offset *horizontally* sometimes. I'm mentioning this here because I'm not sure if it has the same root cause as this issue with the panel, or something else like the "divisible by two" thing. I can open up another bug for this if it would be useful.

Attaching a screen recording showing what I mean (this is after applying the commit that fixes this issue).
Comment 6 Noah Davis 2024-02-27 06:43:13 UTC
Probably an issue with the outline not having the exact right math to stay outside the bounds of the recording area.
Comment 7 Noah Davis 2024-03-05 20:41:44 UTC
*** Bug 482287 has been marked as a duplicate of this bug. ***
Comment 8 Noah Davis 2024-03-05 20:42:35 UTC
*** Bug 482407 has been marked as a duplicate of this bug. ***
Comment 9 Noah Davis 2024-05-05 20:35:45 UTC
*** Bug 482747 has been marked as a duplicate of this bug. ***