Set layer-shell exclusive zone for capture region overlay

An exclusize zone of -1 means the window should not make way for other
surfaces.

BUG: 481391